--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<p>
-  {{name}} Start editing to see some magic happen :)
-</p>
+<div class="container">
+    <h1>Welcome to the App</h1>
+    <hr>
+    <app-servers></app-servers>
+    
+</div>
