--- a/src/app/server/server.component.html
+++ b/src/app/server/server.component.html
@@ -1,1 +1,1 @@
-<p>Server with ID {{id}} is {{status}}</p>
+<p [ngStyle]="{backgroundColor: getColor()}"  [ngClass]="{online: status === 'online'}">Server with ID {{id}} is {{status}}</p>
