--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -4,5 +4,4 @@
 <!-- <p [innerText]="allowNewServer"></p> -->
 <p>{{serverCreationStatus}}</p>
 <!-- <p>{{serverName}}</p> -->
-<app-server></app-server>
-<app-server></app-server>
+<app-server *ngFor="let server of servers"></app-server>
